<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.jiva.mandi.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_194dp"
                android:layout_marginTop="@dimen/size_20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_apple" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                style="@style/bold_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />


            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/parentViewLargePadding"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_70dp"
                android:background="@drawable/login_bg"
                android:paddingBottom="@dimen/size_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome"
                app:layout_constraintVertical_weight="1">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLoginTitle"
                    style="@style/bold_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:contentDescription="@string/loginTitle"
                    android:gravity="center"
                    android:text="@string/login_welcome_msg"
                    android:textColor="?attr/editTextColor"
                    android:textSize="@dimen/text_size_30sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileNumberTextField"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="@dimen/size_25dp"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/enable_text_layout_color_selector"
                    app:boxStrokeColor="@color/enable_text_layout_color_selector"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLoginTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMobileNumber"
                        style="@style/TextInputEditTextStyle"
                        android:contentDescription="@string/loginUsername"
                        android:digits="0123456789"
                        android:drawableStart="@drawable/ic_baseline_call_24"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
                        android:maxLength="10"
                        android:text="@={loginViewModel.loginRequest.username}"
                        android:textColor="?attr/editTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextField"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/enable_text_layout_color_selector"
                    app:boxStrokeColor="@color/enable_text_layout_color_selector"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobileNumberTextField"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGrayIconTint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        style="@style/TextInputEditTextStyle"
                        android:contentDescription="@string/loginPassword"
                        android:drawableStart="@drawable/ic_password"
                        android:inputType="textPassword"
                        android:text="@={loginViewModel.loginRequest.password}"
                        android:textColor="?attr/editTextColor"
                        app:passwordToggleDrawable="@drawable/password_selector"
                        app:passwordToggleEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/medium_regular_font"
                    android:paddingTop="@dimen/size_8dp"
                    android:paddingBottom="@dimen/size_8dp"
                    android:text="@string/forgot_password"
                    android:textColor="?attr/editTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordTextField" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/primaryButtonStyle"
                    android:contentDescription="@string/loginButton"
                    android:text="@string/log_in"
                    app:cornerRadius="@dimen/size_7dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNoAccount"
                    style="@style/medium_regular_font"
                    android:paddingTop="@dimen/size_8dp"
                    android:paddingBottom="@dimen/size_8dp"
                    android:text="@string/unregister"
                    android:textColor="?attr/editTextColor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRegister"
                    style="@style/large_bold_font"
                    android:layout_marginStart="@dimen/size_2dp"
                    android:paddingTop="@dimen/size_8dp"
                    android:paddingBottom="@dimen/size_8dp"
                    android:text="@string/register"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/tvNoAccount"
                    app:layout_constraintLeft_toRightOf="@+id/tvNoAccount"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin"
                    app:layout_constraintTop_toTopOf="@id/tvNoAccount" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSkip"
                    style="@style/medium_bold_font"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/size_2dp"
                    android:gravity="center"
                    android:paddingTop="@dimen/size_8dp"
                    android:paddingBottom="@dimen/size_8dp"
                    android:text="@string/skip"
                    android:textColor="?attr/editTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>