<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registerViewModel"
            type="com.jiva.mandi.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        style="@style/parentViewLargePadding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        tools:context=".ui.register.RegisterActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUpTitle"
            style="@style/bold_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:contentDescription="@string/loginTitle"
            android:text="@string/sign_up"
            android:textColor="?attr/editTextColor"
            android:textSize="@dimen/text_size_30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameTextField"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/size_20dp"
            android:hint="@string/name"
            android:textColorHint="@color/enable_text_layout_color_selector"
            app:boxStrokeColor="@color/enable_text_layout_color_selector"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFullName"
                style="@style/TextInputEditTextStyle"
                android:contentDescription="@string/loginUsername"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:inputType="text"
                android:text="@={registerViewModel.user.name}"
                android:textColor="?attr/editTextColor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileNumberTextField"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/size_20dp"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/enable_text_layout_color_selector"
            app:boxStrokeColor="@color/enable_text_layout_color_selector"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullNameTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMobileNumber"
                style="@style/TextInputEditTextStyle"
                android:contentDescription="@string/loginUsername"
                android:digits="0123456789"
                android:drawableStart="@drawable/ic_baseline_call_24"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:text="@={registerViewModel.user.mobileNumber}"
                android:textColor="?attr/editTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="@dimen/size_20dp"
            android:hint="@string/password"
            android:textColorHint="@color/enable_text_layout_color_selector"
            app:boxStrokeColor="@color/enable_text_layout_color_selector"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobileNumberTextField"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGrayIconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                style="@style/TextInputEditTextStyle"
                android:contentDescription="@string/loginPassword"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:text="@={registerViewModel.user.password}"
                android:textColor="?attr/editTextColor"
                app:passwordToggleDrawable="@drawable/password_selector"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spVillage"
            style="@style/SpinnerStyle"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@null"
            android:dropDownVerticalOffset="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectVillageError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_village"
            android:textColor="@color/errorColor"
            android:textSize="@dimen/text_size_12sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spVillage" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            style="@style/primaryButtonStyle"
            android:layout_marginTop="@dimen/size_25dp"
            android:contentDescription="@string/loginButton"
            android:text="@string/sign_up"
            app:cornerRadius="@dimen/size_7dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spVillage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>